--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
-data:
-  image: busybox
-  volumes:
-    - /data
+#data:
+  #image: busybox
+  #volumes:
+    #- /data
 
 server:
-  image: mprokopov/manager.io
-  command: mono ManagerServer.exe -port 8080 -path '/data'
-  volumes_from:
-    - data
+  build: .
+  #image: mprokopov/manager.io
+  volumes:
+    - ./data:/data
   environment:
     - VIRTUAL_HOST=manager.dev
+  #command: mono ManagerServer.exe -port 8080 -path '/data'
+  #volumes_from:
+    #- data
